Kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: NodePort  
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30001  # Utilisez un numéro de port dans la plage 30000-32767
