Kubernetes/backend-networkpolicy.yaml
# précise les règles de communication réseau autorisées pour l’application (network policy)
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy
metadata:
  name: allow-backend-db
spec:
  podSelector:
    matchLabels:
      app: database
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend
      ports:
        - protocol: TCP
          port: 3306
